		memory range with PROT_EXEC, which is reset when it overflows.
		Beginning on a (so far dummy) IRNativeAMD64 code generator.
		Adding a configure option for disabling native code generation
		support completely.
20080229	Rethinking how the IR stuff should work: I'll probably use
		simple and traditional interpretation by default (read instr,
		decode, execute), and only let native code generation via some
		form of IR kick in when necessary. Two advantages: it will be
		easier to add new cpu types (because an interpretation switch/
		case block is very easy to understand), and there will be no
		waste of memory (for IR data) for code which is not commonly
		used.
		Removing IRBlock and IRInstruction, but keeping IRBlockCache
		and IRNativeAMD64 for later.
		The IRBlockCache can now be resized during runtime (and it
		expands automatically if necessary).
20080314	Working on the main loop, GXemul::ExecuteCycles(), which should
		call each component's Run function in suitable proportions.
		Adding a CPUComponent base class, from which MIPS_CPUComponent
		inherits.
20080316	Switching from CVS to SVN.
		Adding a test to the configure script for the "-ansi" compiler
		option; implementing a simple parse_number to replace strtoull
		to make everything build with -ansi. Various minor fixes to
		make -ansi work on a Debian GNU/Linux system (using CXXFLAGS
		instead of CFLAGS in Makefiles, and probe MAP_ANON in the
		configure script using $CXX, not $CC).
		Moving NativeTranslationExists and LookupCurrentCodePage from
		MIPS_CPUComponent to CPUComponent; these are intended to be
		used from most CPU components.
		Removing lots of "cd .." stuff from the Makefiles; GNU make
		did not work too well with them. Hopefully this will make
		tracking down compile problems on GNU/Linux machines easier.
20080317	Beginning on an AddressDataBus abstract class/interface, which
		e.g. the RAM component will implement.
20080320	Continuing on the RAMComponent class.