@@ -1,0 +1,11 @@
+[Desktop Entry]
+Encoding=UTF-8
+Name=GXemul
+Name[sv]=Maskinemulatorn GXemul
+Comment=Full-system computer architecture emulator.
+Comment[sv]=Datorarkitekturemulator.
+Exec=gxemul-gui
+Terminal=false
+Type=Application
+Icon=gxemul-gui.png
+Categories=Application;Development;
